--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "register for notifications about snowfall forecasts for ski resorts",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node dist/index.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +26,12 @@
   },
   "homepage": "https://github.com/stumash/stumash_onthesnow_bot#readme",
   "dependencies": {
-    "slimbot": "^5.0.0"
+    "cheerio": "^1.0.0-rc.5",
+    "slimbot": "^5.0.0",
+    "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "typescript": "^4.1.5"
   }
 }
