--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
+    "@types/sqlite3": "^3.1.7",
     "typescript": "^4.1.5"
   }
 }
