start web scraping

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/stumash/stumash_onthesnow_bot#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.5",
+    "node-schedule": "^2.0.0",
     "slimbot": "^5.0.0",
     "sqlite3": "^5.0.2"
   },
