--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "register for notifications about snowfall forecasts for ski resorts",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
     "build": "tsc",
-    "script": "node dist/script.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/src/index.js",
+    "buildstart": "tsc && node dist/src/index.js",
+    "script": "function go() { x=$1; shift; tsc && node \"dist/src/scripts/$x.js\" \"$@\"; }; go ",
+    "node": "node",
+    "test": "mocha --require ts-node/register --recursive ./test/*.ts"
   },
   "repository": {
     "type": "git",
@@ -30,12 +32,25 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
     "node-schedule": "^2.0.0",
+    "reflect-metadata": "^0.1.13",
     "slimbot": "^5.0.0",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "ts-node": "^10.3.0",
+    "typedjson": "^1.8.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.22",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^14.14.31",
+    "@types/node-schedule": "^1.3.2",
     "@types/sqlite3": "^3.1.7",
+    "@types/temp": "^0.9.1",
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
+    "temp": "^0.9.4",
     "typescript": "^4.1.5"
+  },
+  "config": {
+    "dbFile": "db.db"
   }
 }
